# sdaccel_example

./: CMakeLists.txt  Kernel.cpp  Kernel.h.in  README.md  RunHardware.cpp  Testbench.cpp
cmake/: FindSDAccel.cmake  FindVivadoHLS.cmake
include/: Burst.h  OpenCL.h
script/: CSim.tcl.in  CoSim.tcl.in  Synthesis.tcl.in
